--- a/index.css
+++ b/index.css
@@ -1,17 +1,34 @@
 body {
 	margin: 0px;
-
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
 #header {
-	height: 6em;
+
 	background-color: #ace;
 		sbackground-color: #bdf;
+	font-family: 'Open Sans Condensed', sans-serif;
+
 }
 
-i {
-	font-size: 2em;
-	color: black;
+#board {
+	//height: 6em;
+	padding-left: 5%;
+}
+
+#board h1 {
+	display: inline-block;
+	font-size: 2.5em;
+	padding-right: 3em;
+	line-height: 50%;
+}
+
+#board i {
+	
+}
+
+#board h4 {
+	display: none; 
 }
 
 #options {
@@ -65,8 +82,8 @@ i {
 
 .main_title {
 	margin: 0px 0px .4em 0px;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 1.8em;
+font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 2.5em;
 }
 
 .main_info {
@@ -106,6 +123,13 @@ i {
 }
 
 @media only screen and (min-width: 768px) {
+
+	#board h4 {
+		display: inline-block;
+		position: absolute;
+		right: 5%;
+		top: 2.5em;
+	}
     #main {
     	margin-left: 20%;
     }
